--- a/style.css
+++ b/style.css
@@ -123,3 +123,16 @@ img:hover {
   #Projects a{
 	  font-size: 22px;
   }
+  .button {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+  }
+  .button4 {border-radius: 12px;}
