--- a/style.css
+++ b/style.css
@@ -93,14 +93,28 @@
   font-family: 'Chewy', cursive;
 }
 #a{
+	width: 100%;
 	margin: auto;
 	align-items: center;
 	padding: 5%;
 	background-color: #e6ffe6;
-
+	display: flex;
+	font-family: 'Chewy', cursive;
+}
+#a h1{
+	font-family: 'Chewy', cursive;
 }
 #b{
+	width: 45%;
+	font-size: 25px;
 	align-items: center;
+	float: left;
+}
+#c{
+	width: 45%;
+	
+	align-items: center;
+	float: right;
 }
 /* td:first-child img{
 	border-radius: 50%;
